<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/descrRateFragment"
        android:textSize="22dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:max="5"
        android:min="5"
        android:numStars="5"
        android:theme="@style/MyRatingBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnRateFragmentAfter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bkg"
            android:text="@string/txtAfter" />

        <Button
            android:id="@+id/btnRateFragmentNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bkg"
            android:text="@string/txtNo"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btnRateFragmentRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bkg"
            android:text="@string/txtRate"
            android:textColor="@color/green" />
    </LinearLayout>
</LinearLayout>