<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/default_color_card"
    android:layout_gravity="center"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:contentPadding="10dp"
    card_view:cardElevation="5dp"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/dlg_conftal_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_dt"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_dt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_dt"
                        android:textStyle="italic"
                        android:textIsSelectable="true"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_spec"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_spec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_spec"
                        android:textStyle="italic"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_doct"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_doct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_doct"
                        android:textStyle="italic"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_clinic"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_clinic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_clinic"
                        android:textStyle="italic"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_clinic_adr"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_clinic_adr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_clinic_adr"
                        android:textStyle="italic"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/dlg_conftal_talon_num_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_talon_num"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_talon_num_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_talon_num"
                        android:textColor="@color/green"
                        android:textSize="22dp"
                        android:textStyle="bold"
                        android:textIsSelectable="true"/>
                    <TextView
                        android:id="@+id/dlg_conftal_old_talon_num_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_conftal_old_talon_num"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dlg_conftal_old_talon_num_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/txt_conftal_talon_num"
                        android:textColor="@color/red"
                        android:textSize="22dp"
                        android:textStyle="bold"
                        android:textIsSelectable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dlg_conftal_dbg_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dlg_coftal_dbg_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:textColor="@color/green"
                        android:textIsSelectable="false"
                        android:textSize="16dp"
                        android:textStyle="" />

                    <TextView
                        android:id="@+id/dlg_coftal_dbg_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></LinearLayout>

                <CheckBox
                    android:id="@+id/dlg_coftal_chk_add_event_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:text="@string/addEventToCalendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_confirm_talon_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/bkg_btn_positive"
                    android:text="@string/confirm" />

                <Button
                    android:id="@+id/dialog_confirm_talon_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/bkg_btn_negative"
                    android:text="@string/cancel" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
    </android.support.v7.widget.CardView>
