<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/launch_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/launch_title"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_vertical|center_horizontal"
        android:id="@+id/imageView"
        android:background="@drawable/hospital"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/launch_tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_vertical|center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/launch_bottom"
            android:textIsSelectable="true"
            android:textSize="14dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/launch_covid19"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <WebView
            android:id="@+id/launch_webViewBaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <!--
        <Button
            android:id="@+id/btn_stop_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="Остановить поток"/>

        <Button
            android:id="@+id/btn_run_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="Запустить поток"/>
            -->
</LinearLayout>